links to login and register routes

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -4,4 +4,7 @@
 
 {% block body %}
     <h1>Welcome to Budgete!</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem fugit neque quaerat repellat totam, ut voluptas voluptate. Adipisci autem doloribus exercitationem iusto maiores omnis, qui quis, quisquam similique tempora voluptates!</p>
+    <div><a href="{{ path('app_login') }}">Login</a></div>
+    <div><a href="{{ path('app_register') }}">Register</a></div>
 {% endblock %}
