recent log card style

--- a/templates/dashboard/_budget.html.twig
+++ b/templates/dashboard/_budget.html.twig
@@ -7,12 +7,12 @@
 
     <article class="card mb-3">
         <div class="card-body">
-            <div class="text-muted">{{ item.created.format('d.m.Y') }}</div>
+            <div class="text-muted small font-weight-bold mb-1">{{ item.created.format('d.m.Y H:i') }}</div>
             <div class="mb-1"><span class="badge badge-{{ badge_color }}">{{ item.type }}</span> {{ item.amount|number_format(0,'.',' ') }}</div>
             <div class="small mb-3">{{ item.description }}</div>
-            <div class="btn-group">
+            <div class="text-right">
                 {# todo: add and implement proper routes #}
-                <a class="btn btn-outline-primary btn-sm" href="/edit">Edit</a>
+                <a class="pl-4 pr-4 mr-3 btn btn-outline-primary btn-sm" href="/edit">Edit</a>
                 <a class="btn btn-outline-danger btn-sm" href="/remove">Remove</a>
             </div>
         </div>
