--- a/templates/dashboard/_recent.html.twig
+++ b/templates/dashboard/_recent.html.twig
@@ -6,15 +6,21 @@
     {% endif %}
 
     <article class="card mb-3">
-        <div class="card-body">
-            <div class="text-muted small font-weight-bold mb-1">{{ item.created.format('d.m.Y H:i') }}</div>
-            <div class="mb-1"><span class="badge badge-{{ badge_color }}">{{ item.type }}</span> {{ item.amount|number_format(0,'.',' ') }}</div>
-            <div class="small mb-3">{{ item.description }}</div>
-            <div class="text-right">
-                {# todo: add and implement proper routes #}
-                <a class="pl-4 pr-4 mr-3 btn btn-outline-primary btn-sm" href="/edit">Edit</a>
-                <a class="btn btn-outline-danger btn-sm" href="/remove">Remove</a>
+        <header class="card-header d-flex justify-content-between align-items-center">
+            <div class="text-muted">{{ item.created.format('d.m.Y H:i') }}</div>
+            <div class="dropdown">
+                <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="actions-{{ item.getId }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Actions</button>
+                <div class="dropdown-menu" aria-labelledby="actions-{{ item.getId }}">
+                    {# todo: add and implement proper routes #}
+                    <a class="dropdown-item" href="edit/#">Edit</a>
+                    <a class="dropdown-item" href="delete/#">Delete</a>
+                </div>
             </div>
+        </header>
+        <div class="card-body">
+            <div class="mb-1">
+                <div class="h5">{{ item.amount|number_format(0,'.',' ') }} <span class="badge badge-{{ badge_color }}">{{ item.type }}</span></div>
+            <div class="small">{{ item.description }}</div>
         </div>
 
     </article>
