--- a/templates/dashboard/_recent.html.twig
+++ b/templates/dashboard/_recent.html.twig
@@ -4,24 +4,25 @@
     {% elseif item.type == 'income' %}
         {% set badge_color = 'success' %}
     {% endif %}
-
-    <article class="card mb-3">
-        <header class="card-header d-flex justify-content-between align-items-center">
-            <div class="text-muted">{{ item.created.format('d.m.Y H:i') }}</div>
-            <div class="dropdown">
-                <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="actions-{{ item.getId }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Actions</button>
-                <div class="dropdown-menu" aria-labelledby="actions-{{ item.getId }}">
-                    {# todo: add and implement proper routes #}
-                    <a class="dropdown-item" href="edit/#">Edit</a>
-                    <a class="dropdown-item" href="delete/#">Delete</a>
+    <div class="col-sm">
+        <article class="card mb-3">
+            <header class="card-header d-flex justify-content-between align-items-center">
+                <div class="text-muted">{{ item.created.format('d.m.Y H:i') }}</div>
+                <div class="dropdown">
+                    <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="actions-{{ item.getId }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Actions</button>
+                    <div class="dropdown-menu" aria-labelledby="actions-{{ item.getId }}">
+                        {# todo: add and implement proper routes #}
+                        <a class="dropdown-item" href="edit/#">Edit</a>
+                        <a class="dropdown-item" href="delete/#">Delete</a>
+                    </div>
                 </div>
+            </header>
+            <div class="card-body">
+                <div class="h5 mb-0">{{ item.amount|number_format(0,'.',' ') }}
+                    <span class="verti badge badge-{{ badge_color }}" style="vertical-align: super">{{ item.type }}</span>
+                </div>
+                <div class="text-muted mt-2">{{ item.description }}</div>
             </div>
-        </header>
-        <div class="card-body">
-            <div class="mb-1">
-                <div class="h5">{{ item.amount|number_format(0,'.',' ') }} <span class="badge badge-{{ badge_color }}">{{ item.type }}</span></div>
-            <div class="small">{{ item.description }}</div>
-        </div>
-
-    </article>
+        </article>
+    </div>
 {% endfor %}
