--- a/templates/dashboard/_recent.html.twig
+++ b/templates/dashboard/_recent.html.twig
@@ -4,12 +4,12 @@
     {% elseif item.type == 'income' %}
         {% set badge_color = 'success' %}
     {% endif %}
-    <div class="col-sm">
+    <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
         <article class="card mb-3">
             <header class="card-header d-flex justify-content-between align-items-center">
                 <div class="text-muted">{{ item.created.format('d.m.Y H:i') }}</div>
                 <div class="dropdown">
-                    <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="actions-{{ item.getId }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Actions</button>
+                    <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="actions-{{ item.getId }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Actions</button>
                     <div class="dropdown-menu" aria-labelledby="actions-{{ item.getId }}">
                         {# todo: add and implement proper routes #}
                         <a class="dropdown-item" href="edit/#">Edit</a>
@@ -19,7 +19,7 @@
             </header>
             <div class="card-body">
                 <div class="h5 mb-0">{{ item.amount|number_format(0,'.',' ') }}
-                    <span class="verti badge badge-{{ badge_color }}" style="vertical-align: super">{{ item.type }}</span>
+                    <span class="badge badge-{{ badge_color }}" style="vertical-align: super">{{ item.type }}</span>
                 </div>
                 <div class="text-muted mt-2">{{ item.description }}</div>
             </div>
