--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -17,7 +17,7 @@
                     <a class="dropdown-item" href="{{ path('app_logout') }}">Logout</a>
                 </div>
             </div>
-            <a class="btn btn-primary" href="{{ path('budget_add') }}">Add <span class="d-none d-md-inline">income/expense</span></a>
+            <a class="btn btn-primary" href="{{ path('add_budget') }}">Add <span class="d-none d-md-inline">income/expense</span></a>
         {% endif %}
         </div>
     </nav>
