--- a/templates/dashboard/_recent.html.twig
+++ b/templates/dashboard/_recent.html.twig
@@ -13,7 +13,7 @@
                     <div class="dropdown-menu" aria-labelledby="actions-{{ item.getId }}">
                         {# todo: add and implement proper routes #}
                         <a class="dropdown-item" href="{{ path('edit_budget', { id: item.getId }) }}">Edit</a>
-                        <a class="dropdown-item" href="delete/#">Delete</a>
+                        <a class="dropdown-item" href="{{ path('remove_budget', { id: item.getId }) }}">Delete</a>
                     </div>
                 </div>
             </header>
