--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -11,7 +11,7 @@
                     <span class="d-none d-md-inline">{{ user.name ?: user.email }}</span>
                     <span class="caret"></span>
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navUserDropdown">
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navUserDropdown">
                     <div class="dropdown-item d-xs-block d-md-none disabled">{{ user.name ?: user.email }}</div>
                     <a class="dropdown-item disabled" href="#">(TBD: Profile)</a>
                     <a class="dropdown-item" href="{{ path('app_logout') }}">Logout</a>
