user profine btn menu

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -6,7 +6,7 @@
         {# a user control panel #}
         {% if user %}
             <div class="dropdown mr-3">
-                <a href="#" class="dropdown-toggle" class="dropdown-toggle" id="navUserDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button">
+                <a href="#" class="dropdown-toggle text-light btn btn-secondary" class="dropdown-toggle" id="navUserDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button">
                     <i class="fa fa-user" aria-hidden="true"></i>
                     <span class="d-none d-md-inline">{{ user.name ?: user.email }}</span>
                     <span class="caret"></span>
