--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -5,6 +5,6 @@
 {% block body %}
     <h1>Welcome to Budgete!</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem fugit neque quaerat repellat totam, ut voluptas voluptate. Adipisci autem doloribus exercitationem iusto maiores omnis, qui quis, quisquam similique tempora voluptates!</p>
-    <div><a href="{{ path('app_login') }}">Login</a></div>
-    <div><a href="{{ path('app_register') }}">Register</a></div>
+    <div><a class="btn btn-primary btn-lg" href="{{ path('app_login') }}">Login</a>
+    <a class="btn btn-success btn-lg" href="{{ path('app_register') }}">Register</a></div>
 {% endblock %}
