--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -5,5 +5,6 @@
 {% block body %}
 
     {{ render(controller('App\\Controller\\BudgetController::today')) }}
+    {{ render(controller('App\\Controller\\BudgetController::lastWeek')) }}
 
 {% endblock %}
