--- a/templates/budget/_week.html.twig
+++ b/templates/budget/_week.html.twig
@@ -1,1 +1,23 @@
-{{ dump(records) }}
+<section class="mb-2">
+    <h2>{{ title }}</h2>
+    {{ dump(records) }}
+    {% if records %}
+        {% for key, record in records %}
+            <div class="row">
+                <div class="col">
+                    <article class="card mb-3">
+                        <div class="card-header d-flex justify-content-between align-items-center">
+                            {#<div class="text-muted">{{ record[0].datetime.format('d.m D') }}</div>#}
+                            <div>
+
+                                tbd: income - expense
+                            </div>
+                        </div>
+                        <div class="card-body">{{ dump(record) }}</div>
+                    </article>
+                </div>
+            </div>
+        {% endfor %}
+    {% endif %}
+
+</section>
