last month controller init

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -6,5 +6,6 @@
 
     {{ render(controller('App\\Controller\\BudgetController::today')) }}
     {{ render(controller('App\\Controller\\BudgetController::lastWeek')) }}
+    {{ render(controller('App\\Controller\\BudgetController::lastMonth')) }}
 
 {% endblock %}
