--- a/templates/budget/_week.html.twig
+++ b/templates/budget/_week.html.twig
@@ -30,5 +30,7 @@
                 </div>
             {% endfor %}
         </div>
+    {% else %}
+        <div>Start log your money flow. Data will be here tomorrow.</div>
     {% endif %}
 </section>
