--- a/templates/budget/_day.html.twig
+++ b/templates/budget/_day.html.twig
@@ -1,5 +1,16 @@
+{% if user.getCurrency is not null %}
+    {% set currency = user.getCurrency.getSymbol %}
+{% else %}
+    {% set currency = '' %}
+{% endif %}
+
+
 <section class="mb-3">
-    <h2>{{ title }} <!--<span class="badge-info badge"><a class="text-white" href="{{ path('budget') }}">More items</a></span>--></h2>
+    <h3>{{ title }}
+        <span class="badge badge-danger" style="vertical-align: super; font-size: 55%;">{{ stats.expense.sum ? stats.expense.sum|number_format(0, '.', ' ') : 0 }}{{ currency }}</span>
+        <span class="badge badge-success" style="vertical-align: super; font-size: 55%;">{{ stats.income.sum ? stats.income.sum|number_format(0, '.', ' ') : 0 }}{{ currency }}</span>
+    </h3>
+
     {% if recent %}
         <div class="row">
             {% for item in recent %}
