--- a/templates/budget/_month.html.twig
+++ b/templates/budget/_month.html.twig
@@ -6,15 +6,15 @@
 
 <section class="mb-3">
     {% if records %}
-        <h2>{{ title }}
+        <h3>{{ title }}
             <span class="badge badge-danger" style="vertical-align: super; font-size: 55%;">{{ stats.expense.sum ? stats.expense.sum|number_format(0, '.', ' ') : 0 }}{{ currency }}</span>
             <span class="badge badge-success" style="vertical-align: super; font-size: 55%;">{{ stats.income.sum ? stats.income.sum|number_format(0, '.', ' ') : 0 }}{{ currency }}</span>
-        </h2>
+        </h3>
 
         <div class="row">
             {% for key, record in records %}
                 <div class="col-4 col-sm-3 col-md-2 col-lg-1 col-xl-1">
-                    <article class="pb-2 text-center" style="border-bottom: 1px solid rgba(0,0,0,.125);">
+                    <article class="pb-1 mb-1 text-center" style="border-bottom: 1px solid rgba(0,0,0,.125);">
                         <small class="text-muted d-block">{{ record.datetime.format('d.m D') }}</small>
                         {% if record.diff_type == 'negative' %}
                             <span class="badge badge-danger">{{ record.diff|number_format(0, '.', ' ') }}{{ currency }}</span>
