--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -40,7 +40,10 @@
 
             <button class="btn btn-lg btn-primary" type="submit">
                 Sign in
-            </button> Or <a href="{{ path('reset_passwd') }}" class="btn btn-outline-secondary">Reset password</a>
+            </button>
+            <p class="mt-3">Not registred yet? <a class="font-weight-bold" href="{{ path('app_register') }}">Create an account</a>.
+                If you can't remind your password you can <a href="{{ path('reset_passwd') }}" class="font-weight-bold">reset your password</a>.
+            </p>
         </form>
     {% endif %}
 {% endblock %}
