--- a/templates/security/reset_passwd.html.twig
+++ b/templates/security/reset_passwd.html.twig
@@ -3,6 +3,16 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
+    {% if is_error %}
+        <div class="alert alert-dismissible alert-warning" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">×</span>
+            </button>
+            Would you like to <a href="{{ path('app_register') }}">register</a> instead?
+        </div>
+
+    {% endif %}
     <h1 class="h2">{{ title }}</h1>
+    <p>Type your email that was used to login.</p>
     {{ form(form) }}
 {% endblock %}
