--- a/templates/budget/_day.html.twig
+++ b/templates/budget/_day.html.twig
@@ -21,10 +21,10 @@
                 {% endif %}
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <article class="card mb-3">
-                        <header class="card-header d-flex justify-content-between align-items-center">
+                        <header class="card-header pl-3 pr-0 py-0 d-flex justify-content-between align-items-center">
                             <div class="text-muted">{{ item.created.format('H:i') }}</div>
                             <div class="dropdown">
-                                <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="actions-{{ item.getId }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Actions</button>
+                                <button style="border-top-right-radius: 3px !important;" class="btn btn-info btn-sm rounded-0" type="button" id="actions-{{ item.getId }}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-edit"></i></button>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="actions-{{ item.getId }}">
                                     <a class="dropdown-item" href="{{ path('edit_budget', { id: item.getId }) }}">Edit</a>
                                     <a class="dropdown-item" href="{{ path('remove_budget', { id: item.getId }) }}">Delete</a>
