--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -17,7 +17,13 @@
             {% endif %}
 
             <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-
+            {% if app.environment is same as("dev") %}
+                <ul class="bg-dark text-white">
+                    You are using a development environment. Probably you need to load a demo data first.
+                    <li>load fixtures: <code>php bin/console doctrine:fixtures:load</code></li>
+                    <li>login as <code>test@test.test:123456</code></li>
+                </ul>
+            {% endif %}
             <div class="form-group">
                 <label for="inputEmail">Email</label>
                 <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
@@ -33,7 +39,7 @@
 
             <div class="checkbox mb-3">
                 <label>
-                    <input type="checkbox" name="_remember_me"> Remember me
+                    <input type="checkbox" name="_remember_me" checked> Remember me
                 </label>
             </div>
 
