today block as list-group

--- a/templates/budget/_day.html.twig
+++ b/templates/budget/_day.html.twig
@@ -11,7 +11,34 @@
         <span class="badge badge-success" style="vertical-align: super; font-size: 55%;">{{ stats.income.sum ? stats.income.sum|number_format(0, '.', ' ') : 0 }}{{ currency }}</span>
     </h3>
 
+    {#{{ dump(recent) }}#}
     {% if recent %}
+        <div class="row">
+            <div class="col mb-3">
+                <ul class="list-group">
+                    {% for item in recent %}
+                        <a class="list-group-item d-flex justify-content-between {{ loop.first ? 'active' }}" href="{{ path('edit_budget', { id: item.getId }) }}">
+                            <div>
+                                <div>{{ item.created.format('H:i') }}</div>
+                                <div>{{ item.description }}</div>
+                            </div>
+                            <div>
+                                <span class="badge badge-pill badge-{{ item.type == 'expense' ? 'danger' : 'success' }}">
+                                    {#{{ item.amount|number_format(0,'.',' ') }}{% if user.getCurrency is not null %}{{ user.getCurrency.getSymbol }}{% endif %}#}
+                                    {{ item.amount|number_format(0,'.',' ') }}{{ user.getCurrency is not null ? user.getCurrency.getSymbol }}
+                                </span>
+                            </div>
+                        </a>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    {% else %}
+        <div class="mb-3">You have no records for today yet.</div>
+        <div><a href="{{ path('add_budget') }}" class="btn btn-success">Create a record</a></div>
+    {% endif %}
+
+{#    {% if recent %}
         <div class="row">
             {% for item in recent %}
                 {% if item.type == 'expense' %}
@@ -41,11 +68,10 @@
                 </div>
             {% endfor %}
         </div>
-
     {% else %}
         <div class="mb-3">You have no records for today yet.</div>
         <div><a href="{{ path('add_budget') }}" class="btn btn-success">Create a record</a></div>
-    {% endif %}
+    {% endif %}#}
 </section>
 
 
