--- a/templates/budget/_day.html.twig
+++ b/templates/budget/_day.html.twig
@@ -10,7 +10,7 @@
         <span class="badge badge-danger" style="vertical-align: super; font-size: 55%;">{{ stats.expense.sum ? stats.expense.sum|number_format(0, '.', ' ') : 0 }}{{ currency }}</span>
         <span class="badge badge-success" style="vertical-align: super; font-size: 55%;">{{ stats.income.sum ? stats.income.sum|number_format(0, '.', ' ') : 0 }}{{ currency }}</span>
     </h3>
-    <div class="lead">Click a record to see its details</div>
+    <div class="lead">Click a record to edit its details</div>
 
     {% if recent %}
         <div class="row">
